--- a/index.html
+++ b/index.html
@@ -1,18 +1,37 @@
-<!doctype html>
+<HTML>
 
-<html lang="en">
-<head>
-  <meta charset="utf-8">
+<HEAD>
 
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+<TITLE>Your Title Here</TITLE>
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+</HEAD>
 
-</head>
+<BODY BGCOLOR="FFFFFF">
 
-<body>
-  <script src="js/scripts.js"></script>
-</body>
-</html>
+<CENTER><IMG SRC="clouds.jpg" ALIGN="BOTTOM"> </CENTER>
+
+<HR>
+
+<a href="http://somegreatsite.com">Link Name</a>
+
+is a link to another nifty site
+
+<H1>This is a Header</H1>
+
+<H2>This is a Medium Header</H2>
+
+Send me mail at <a href="mailto:support@yourcompany.com">
+
+support@yourcompany.com</a>.
+
+<P> This is a new paragraph!
+
+<P> <B>This is a new paragraph!</B>
+
+<BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
+
+<HR>
+
+</BODY>
+
+</HTML>
