--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!doctype html>
 <html lang="en">
+  
+<head>
+<link  
+<link href="knit.css" type="text/css" rel="stylesheet">
+</head> 
+  
 <body>
   <h1>The Brown Bear</h1>
   <div id="introduction">
