--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-  <title>Vacation World</title>
-  <link href="style.css" type="text/css" rel="stylesheet">
+  <title>Knitting</title>
+  <link href="knit.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
