--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 </head>
 
 <body>
-  <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/explorer.jpeg" />
-  <h1 class="title cursive capitalize" >Top Vacation Spots</h1>
+ <!-- <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/explorer.jpeg" /> -->
+  <h1 class="title cursive capitalize" >Lets Get Knittin</h1>
   <h5>By: Stacy Gray</h5>
-  <h6 class="publish-time">Published: 2 Days Ago</h6>
 
   <p>The world is full of fascinating places. Planning the perfect vacation involves packing up, leaving home, and experiencing something new.</p>
 
