--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="knit.css" type="text/css" rel="stylesheet">
 </head>
 
-<body>
+<body bgcolor="Light Pink">
  <!-- <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/explorer.jpeg" /> -->
   <h1 class="title cursive capitalize" >Lets Get Knittin</h1>
   <h5>By: Stacy Gray</h5>
