--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body bgcolor="#F0FFF0">
  <!-- <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/explorer.jpeg" /> -->
-  <h1 class="title cursive capitalize" >Lets Get Knittin</h1>
+  <h1 class="title cursive capitalize" >A little Bit About Knitting</h1>
   <h5>By: Stacy Gray</h5>
 
   <p>The world is full of fascinating places. Planning the perfect vacation involves packing up, leaving home, and experiencing something new.</p>
