--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body bgcolor="#F0FFF0">
- <!-- <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/explorer.jpeg" /> -->
+  <img src="https://irepo.primecp.com/2017/06/335612/What-is-a-skein-of-yarn-9_Large600_ID-2291129.jpg?v=2291129" />
   <h1 class="title cursive capitalize" >A little Bit About Knitting</h1>
   <h5>By: Stacy Gray</h5>
 
