--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body bgcolor="#F0FFF0">
-  <img src="https://irepo.primecp.com/2017/06/335612/What-is-a-skein-of-yarn-9_Large600_ID-2291129.jpg?v=2291129" />
   <h1 class="title cursive capitalize" >A little Bit About Knitting</h1>
+  <img src="https://irepo.primecp.com/2017/06/335612/What-is-a-skein-of-yarn-9_Large600_ID-2291129.jpg?v=2291129" style="width:500px;height:600px;">/>
   <h5>By: Stacy Gray</h5>
 
   <p>The world is full of fascinating places. Planning the perfect vacation involves packing up, leaving home, and experiencing something new.</p>
