--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body bgcolor="#F0FFF0">
   <h1 class="title cursive capitalize" >A little Bit About Knitting</h1>
+  </body> 
   <img src="https://irepo.primecp.com/2017/06/335612/What-is-a-skein-of-yarn-9_Large600_ID-2291129.jpg?v=2291129" style="width:500px;height:600px;">/>
   <h5>By: Stacy Gray</h5>
 
