--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  
+<link href="index.html" type="text/html" rel="stylesheet">
+  
 <style>
 ul {
   list-style-type: none;
