--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
  
   <title>Knitting</title>
   <link href="knit.css" type="text/css" rel="stylesheet">
+  <link href="menu.html" type="text/html" rel="stylesheet">
+ 
 </head>
    
   <body bgcolor="#F0FFF0"> 
