--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
  
   <title>Knitting</title>
   <link href="knit.css" type="text/css" rel="stylesheet">
-  <link href="menu.html" type="text/html" rel="stylesheet">
+  <a href="menu.html"</a>
+
  
 </head>
    
