--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
  
   <title>Knitting</title>
   <link href="knit.css" type="text/css" rel="stylesheet">
- 
+  <a href="index.html"</a>  
+   
 </head>
    
   <h1 class="title cursive capitalize" >A little Bit About Knitting</h1>
