--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  
   <title>Knitting</title>
   <link href="knit.css" type="text/css" rel="stylesheet">
-  <a href="index.html"</a>  
+  <a href="menu.html"</a>  
    
 </head>
    
