--- a/index.html
+++ b/index.html
@@ -11,44 +11,11 @@
  
   <title>Knitting</title>
   <link href="knit.css" type="text/css" rel="stylesheet">
-  <a href="menu.html" title="About Me">About Me</a> 
    
 </head>
-   
-   ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  background-color: #f1f1f1;
-}
-
-li a {
-  display: block;
-  color: #000;
-  padding: 8px 16px;
-  text-decoration: none;
-}
-
-/* Change the link color on hover */
-li a:hover {
-  background-color: #555;
-  color: white;
-}
-</style>
-</head>
-<body>
-
-<h2>Vertical Navigation Bar</h2>
-
-<ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
-</ul>
    
   <h1 class="title cursive capitalize" >A little Bit About Knitting</h1>
+  <a href="menu.html" title="A little more info">About Me</a>    
   <img src="https://irepo.primecp.com/2017/06/335612/What-is-a-skein-of-yarn-9_Large600_ID-2291129.jpg?v=2291129">
      
   <h5>By: Stacy Gray</h5>
