--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
    
 </head>
    
-  <h1 class="title cursive capitalize" >A little Bit About Knitting</h1>
-  <a href="menu.html" title="A little more info">About Me</a>    
+  <h1 class="title cursive capitalize" >A little Bit About Knitting</h1> 
   <img src="https://irepo.primecp.com/2017/06/335612/What-is-a-skein-of-yarn-9_Large600_ID-2291129.jpg?v=2291129">
-     
+  <a href="menu.html" title="sup">A little more info</a>       
+   
   <h5>By: Stacy Gray</h5>
   
   <p>The world is full of fascinating places. Planning the perfect vacation involves packing up, leaving home, and experiencing something new.</p>
