--- a/index.html
+++ b/index.html
@@ -11,9 +11,59 @@
  
   <title>Knitting</title>
   <link href="knit.css" type="text/css" rel="stylesheet">
-   
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+ 
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+body {
+  font-family: "Lato", sans-serif;
+}
+
+.sidenav {
+  height: 100%;
+  width: 160px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.sidenav a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.main {
+  margin-left: 160px; /* Same as the width of the sidenav */
+  font-size: 28px; /* Increased text to enable scrolling */
+  padding: 0px 10px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+</style>
+</head>
+<body>
+
+<div class="sidenav">
+  <a href="#about">About</a>
+  <a href="#services">Services</a>
+  <a href="#clients">Clients</a>
+  <a href="#contact">Contact</a>
+</div>
+   
+<!--<style>
 .vertical-menu {
   width: 200px;
   height: 150px;
@@ -52,12 +102,9 @@
   <a href="#">Link 8</a>
   <a href="#">Link 9</a>
   <a href="#">Link 10</a>
-</div> 
+</div> -->
    
-   
-   
-</head>
-   
+ 
   <h1 class="title cursive capitalize" >A little Bit About Knitting</h1> 
   <img src="https://irepo.primecp.com/2017/06/335612/What-is-a-skein-of-yarn-9_Large600_ID-2291129.jpg?v=2291129">
   <a href="menu.html" title="sup">A little more info</a>       
