--- a/index.html
+++ b/index.html
@@ -63,53 +63,11 @@ body {
   <a href="#contact">Contact</a>
 </div>
    
-<!--<style>
-.vertical-menu {
-  width: 200px;
-  height: 150px;
-  overflow-y: auto;
-}
-
-.vertical-menu a {
-  background-color: #eee;
-  color: black;
-  display: block;
-  padding: 12px;
-  text-decoration: none;
-}
-
-.vertical-menu a:hover {
-  background-color: #ccc;
-}
-
-.vertical-menu a.active {
-  background-color: #4CAF50;
-  color: white;
-}
-</style>
-</head>
-<body>
-
-<div class="vertical-menu">
-  <a href="#" class="active">Home</a>
-  <a href="#">Link 1</a>
-  <a href="#">Link 2</a>
-  <a href="#">Link 3</a>
-  <a href="#">Link 4</a>
-  <a href="#">Link 5</a>
-  <a href="#">Link 6</a>
-  <a href="#">Link 7</a>
-  <a href="#">Link 8</a>
-  <a href="#">Link 9</a>
-  <a href="#">Link 10</a>
-</div> -->
-   
- 
+ <div class="main">
   <h1 class="title cursive capitalize" >A little Bit About Knitting</h1> 
   <img src="https://irepo.primecp.com/2017/06/335612/What-is-a-skein-of-yarn-9_Large600_ID-2291129.jpg?v=2291129">
   <a href="menu.html" title="sup">A little more info</a>       
    
-  <h5>By: Stacy Gray</h5>
   
   <p>The world is full of fascinating places. Planning the perfect vacation involves packing up, leaving home, and experiencing something new.</p>
 
@@ -154,7 +112,7 @@ body {
 
   <p>&mdash;Best of luck with your travels, and be sure to send pictures and stories. We"d love to hear them!</p>
 
-
+</div>
 </body>
 
 </html>
