--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@ body {
  <div class="main">
   <h1 class="title cursive capitalize" >A little Bit About Knitting</h1> 
   <img src="https://irepo.primecp.com/2017/06/335612/What-is-a-skein-of-yarn-9_Large600_ID-2291129.jpg?v=2291129">
-  <a href="menu.html" title="sup">A little more info</a>       
+  <!--<a href="menu.html" title="sup">A little more info</a>  -->     
    
   
-  <p>The world is full of fascinating places. Planning the perfect vacation involves packing up, leaving home, and experiencing something new.</p>
+  <p></p>
 
-  <h2 class="destination">1. Florence, Italy</h2>
+  <h2</h2>
   <div class="description">A city-size shrine to the Renaissance, Florence offers frescoes, sculptures, churches, palaces, and other monuments from the richest cultural flowering the world has known. Names from its dazzling historical pastDante, Michelangelo, Galileo, Machiavelliare some of the most resonant of the medieval age. <a href="http://travel.nationalgeographic.com/travel/city-guides/florence-italy/" target="_blank">Learn More</a>.
     <h5>Top Attractions</h5>
     <ul>
@@ -82,7 +82,7 @@ body {
   </div>
 
   <h2 class="destination">2. Beijing, China</h2>
-  <div class="description">A city in the midst of reinventing itself and continuing to build on the success of the 2008 Summer Olympics, Beijing is a place of frenzied construction. New housing, new roads, and new sports venues seem to spring up overnight. At the same time, the capital of the Peoples Republic of China remains an epicenter of tradition, with the treasures of nearly 2,000 years as the imperial capital still on viewin the famed Forbidden City and in the luxuriant pavilions and gardens of the Summer Palace.
+  <div class="description">..
     <a href="http://travel.nationalgeographic.com/travel/city-guides/beijing-china/" target="_blank">Learn More</a>.
     <h5>Top Attractions</h5>
     <ul>
