--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@ body {
 
 <div class="sidenav">
   <a href="#about">About</a>
-  <a href="#services">Services</a>
-  <a href="#clients">Clients</a>
-  <a href="#contact">Contact</a>
+  <a href="#steps">Steps</a>
+  <a href="#tools">Tools</a>
+  <a href="#"></a>
 </div>
    
  <div class="main">
