--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body {
 <body>
 
 <div class="sidenav">
-  <a href="#about">About</a>
+  <a href="index.html">Home</a>
   <a href="#steps">Steps</a>
   <a href="#tools">Tools</a>
   <a href="#"></a>
