--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body {
 
 <div class="sidenav">
   <a href="index.html">Home</a>
-  <a href="#steps">Steps</a>
+  <a href="steps.html">Steps</a>
   <a href="#tools">Tools</a>
   <a href="#"></a>
 </div>
