--- a/steps.html
+++ b/steps.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>   
+<head> 
   
+<h1> The Steps</h1>  
+  
+<style>  
 body {
   font-family: "Lato", sans-serif;
 }
