--- a/steps.html
+++ b/steps.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head> 
+<head>  
   
-<h1> The Steps</h1>  
+<meta name="viewport" content="width=device-width, initial-scale=1">  
   
 <style>  
 body {
