--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ body {
   <p></p>
 
   <h2</h2>
-  <div class="description">A city-size shrine to the Renaissance, Florence offers frescoes, sculptures, churches, palaces, and other monuments from the richest cultural flowering the world has known. Names from its dazzling historical pastDante, Michelangelo, Galileo, Machiavelliare some of the most resonant of the medieval age. <a href="http://travel.nationalgeographic.com/travel/city-guides/florence-italy/" target="_blank">Learn More</a>.
+  <div class="description">. <a href="http://travel.nationalgeographic.com/travel/city-guides/florence-italy/" target="_blank">Learn More</a>.
     <h5>Top Attractions</h5>
     <ul>
       <li>Museums</li>
@@ -93,7 +93,7 @@ body {
   </div>
 
   <h2 class="destination">3. Seoul, South Korea</h2>
-  <div class="description">The Korean capital is a city of contrasts. Fourteenth-century city gates squat in the shadow of 21st-century skyscrapers, while the broad Han River is back-dropped by granite mountains rising in the city centercomplete with alpine highways speeding around their contours and temples nestling among their crags. Fashionable, gadget-laden youths battle for sidewalk space with fortune-tellers and peddlers, while tiny neighborhoods of traditional cottages contrast with endless ranks of identical apartments.
+  <div class="description">.
     <a href="http://travel.nationalgeographic.com/travel/city-guides/seoul-south-korea/" target="_blank">Learn More</a>.
     <h5>Top Attractions</h5>
     <ul>
@@ -109,8 +109,6 @@ body {
     <li><h4 class="destination">Cape Town, South Africa</h4></li>
     <li><h4 class="destination">La Paz, Bolivia</h4></li>
   </ul>
-
-  <p>&mdash;Best of luck with your travels, and be sure to send pictures and stories. We"d love to hear them!</p>
 
 </div>
 </body>
