--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@ body {
 
 <div class="sidenav">
   <a href="index.html">Home</a>
-  <a href="steps.html">Steps</a>
-  <a href="#tools">Tools</a>
-  <a href="#"></a>
+  <a href="Csteps.html">Steps:Cast On</a>
+  <a href="Ksteps.html">Steps:Knit Stitch</a>
 </div>
    
  <div class="main">
