--- a/Csteps.html
+++ b/Csteps.html
@@ -57,8 +57,8 @@ body {
 
 <div class="sidenav">
   <a href="index.html">Home</a>
-  <a href="steps.html">Steps</a>
-  <a href="#tools">Tools</a>
+  <a href="Csteps.html">Steps:Cast On</a>
+  <a href="Ksteps.html">Steps:Knit Stitch</a>
   <a href="#"></a>
 </div>
 
