--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ body {
 </div>
    
  <div class="main">
-  <h1 class="title cursive capitalize" >A little Bit About Knitting</h1> 
+  <h1 class="title cursive capitalize" >How to Knit</h1> 
   <img src="https://irepo.primecp.com/2017/06/335612/What-is-a-skein-of-yarn-9_Large600_ID-2291129.jpg?v=2291129">
   <!--<a href="menu.html" title="sup">A little more info</a>  -->     
    
