--- a/Csteps.html
+++ b/Csteps.html
@@ -28,8 +28,8 @@
 }
 </style>
 </head>
-<body>
-
+<!--<body>
+-->
 <div class="sidenav">
   <a href="index.html">Home</a>
   <a href="Csteps.html">Steps:Cast On</a>
