--- a/Csteps.html
+++ b/Csteps.html
@@ -65,10 +65,10 @@ body {
 </div>
   
  <div class="main">
-  <h1 Casting On</h1>
-  <h3 Step 1: Slip Knot</h3>
-  <p Make a slipknot and leave a tail. The length of this tail varies depending on the number of stitches you will need to cast-on. 
-  To figure out where to tie the slip knot, measure three and a half times the width the pattern calls for. </p> 
+  <h1> Casting On</h1>
+  <h3> Step 1: Slip Knot</h3>
+  <p> Make a slipknot and leave a tail. The length of this tail varies depending 
+  on the number of stitches you will need to cast-on.</p> 
   <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-1-gif_480x480.gif?v=1557164935">  
   
 
