--- a/Csteps.html
+++ b/Csteps.html
@@ -10,37 +10,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
  
   <title>Knitting</title  
-  
+  <link href="knit.css" type="text/css" rel="stylesheet">
+
+    
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 
-body {
-  font-family: "Lato", sans-serif;
-}
-
-.sidenav {
-  height: 100%;
-  width: 160px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  padding-top: 20px;
-}
-
-.sidenav a {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
-}
 
 
 .main {
@@ -55,7 +30,7 @@ body {
 }
 </style>
 </head>
-<body>
+<!--<body>-->
 
 <div class="sidenav">
   <a href="index.html">Home</a>
