--- a/Csteps.html
+++ b/Csteps.html
@@ -80,4 +80,52 @@
   </p> 
   <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-3-photo_480x480.jpg?v=1557165297">   
 
-</html>
+  <h4> Step 4: Pinch Thumb and Index Finger Together</h4>
+  <p> Make the okay sign with your left hand by pinching the thumb and index finger together.
+  </p> 
+  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-3-photo_480x480.jpg?v=1557165297">     
+   
+   
+  <h4> Step 5:  Push Fingers between the 2 Yarn Strands</h4>
+  <p> Put these 2 fingers between the 2 strands of yarn, make sure the short tail end 
+  of the yarn is in front of your thumb and the long working yarn is behind your index finger.
+  </p> 
+  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-5-gif_480x480.gif?v=1557165442">     
+   
+  <h4> Step 6: Grab the Yarn</h4>
+  <p> With your free middle, ring, and pinky fingers on your left hand, 
+  grab around the 2 dangling strands of yarn, like you are making a fist, 
+  and hold the strands out of the way.
+  </p> 
+  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-6-gif_480x480.gif?v=1557165505">     
+ 
+  <h4> Step 7: Push Yarn Apart</h4>
+  <p> Separate your thumb and index finger- like you are making a sling-shot 
+  with your fingers. This will push the strands of yarn apart.
+  </p> 
+  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-7-gif_480x480.gif?v=1557165581">     
+   
+  <h4> Step 8:  Notice the 2 Loops</h4>
+  <p> Look at your hand that is holding the yarn. Notice the loops around your thumb and index fingers.
+  </p> 
+  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-8-photo_480x480.jpg?v=1557165670">     
+ 
+   
+  <h4> Step 9: Put Needle Through 1st Loop</h4>
+  <p> Insert your needle behind the strand of yarn closest to you on your thumb.
+  </p> 
+  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-9-gif_480x480.gif?v=1557165740">     
+ 
+   
+  <h4> Step 10: Put Needle Through 2nd Loop</h4>
+  <p> Insert your needle in front of the strand of yarn closest to 
+  you on the loop around your index finger.
+  </p> 
+  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-10-gif_480x480.gif?v=1557165838">  
+   
+ 
+   <h4> Step 11: Repeat</h4>
+
+
+   
+ </html>
