--- a/Ksteps.html
+++ b/Ksteps.html
@@ -60,5 +60,34 @@
   <a href="steps.html">Steps:Cast On</a>
   <a href="Ksteps.html">Steps:Knit Stitch</a>
 </div>
+  
+  
+<div class="main">
+  <h2> Knit Stitch</h2>
+  <h4> Step 1: Slip Knot</h4>
+  <p> Make a slipknot and leave a tail. The length of this tail varies depending 
+  on the number of stitches you will need to cast-on.</p> 
+  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-1-gif_480x480.gif?v=1557164935">  
+  
+   
+  <h4> Step 2: Put Slip Knot on Needle</h4>
+  <p> Put the needle through the slipknot and pull snug with the short tail end of the yarn closest to you.
+  </p> 
+  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-2-gif_480x480.gif?v=1557165051">   
+   
+   
+  <h4> Step 3: Make Sure the Slip Knot is Facing the Right Way</h4>
+  <p> The string that is attached to your ball of yarn should be in the back 
+  and the string that is free in the front. Then hold this needle in your 
+  right hand with the 2 strings of yarn hanging down. 
+  </p> 
+  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-3-photo_480x480.jpg?v=1557165297">   
+
+  <h4> Step 4: Pinch Thumb and Index Finger Together</h4>
+  <p> Make the okay sign with your left hand by pinching the thumb and index finger together.
+  </p> 
+  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-3-photo_480x480.jpg?v=1557165297">     
+     
+  
 
 </html>
