--- a/Ksteps.html
+++ b/Ksteps.html
@@ -64,30 +64,34 @@
   
 <div class="main">
   <h2> Knit Stitch</h2>
-  <h4> Step 1: Slip Knot</h4>
-  <p> Make a slipknot and leave a tail. The length of this tail varies depending 
-  on the number of stitches you will need to cast-on.</p> 
-  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-1-gif_480x480.gif?v=1557164935">  
+  <h4> Step 1: Hold the needle with the cast on stitches in your left hand, and the empty needle in your right hand.</h4>
+  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/knit-stitch-step-1-photo_480x480.jpg?v=1557168476">  
   
    
-  <h4> Step 2: Put Slip Knot on Needle</h4>
-  <p> Put the needle through the slipknot and pull snug with the short tail end of the yarn closest to you.
+  <h4> Step 2: Hold the empty Needle in front of everything in your right hand</h4>
+  <p> Hold the empty needle in front of the working yarn.
   </p> 
-  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-2-gif_480x480.gif?v=1557165051">   
+  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/knit-stitch-step-3-photo_480x480.jpg?v=1557168620">   
    
    
-  <h4> Step 3: Make Sure the Slip Knot is Facing the Right Way</h4>
-  <p> The string that is attached to your ball of yarn should be in the back 
-  and the string that is free in the front. Then hold this needle in your 
-  right hand with the 2 strings of yarn hanging down. 
+  <h4> Step 3: Insert the Empty Needle into the First Stitch</h4>
+  <p> Insert the new needle into the first stitch, going upwards 
+  into the stitch and creating an “X” with your needles. The old needle (with stitches on it) 
+  is on top of the new needle.
   </p> 
-  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-3-photo_480x480.jpg?v=1557165297">   
+  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/knit-stitch-step-4-gif_480x480.gif?v=1557168679">   
 
-  <h4> Step 4: Pinch Thumb and Index Finger Together</h4>
-  <p> Make the okay sign with your left hand by pinching the thumb and index finger together.
+  <h4> Step 4: Wrap the Yarn Around the Needle</h4>
+  <p> Wrap the yarn around the new needle only in a counter clockwise direction.
   </p> 
-  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-3-photo_480x480.jpg?v=1557165297">     
-     
+  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/knit-stitch-step-5-gif_480x480.gif?v=1557168732">     
+  
+  <h4> Step 5:  Use the Right Needle to pull under the left needle</h4>
+  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/knit-stitch-step-6-gif_480x480.gif?v=1557168805">    
+  
+  <h4> Step 6:  Repeat</h4>
+  
+
   
 
 </html>
