--- a/Csteps.html
+++ b/Csteps.html
@@ -62,13 +62,12 @@
  <div class="main">
   <h2> Casting On</h2>
   <h4> Step 1: Slip Knot</h4>
-  <p> Make a slipknot and leave a tail. The length of this tail varies depending 
-  on the number of stitches you will need to cast-on.</p> 
+  <p> Make a slipknot and leave a tail. </p> 
   <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-1-gif_480x480.gif?v=1557164935">  
   
    
   <h4> Step 2: Put Slip Knot on Needle</h4>
-  <p> Put the needle through the slipknot and pull snug with the short tail end of the yarn closest to you.
+  <p> Put the needle through the slipknot and pull the short tail end of the yarn closest to you.
   </p> 
   <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-2-gif_480x480.gif?v=1557165051">   
    
@@ -93,15 +92,11 @@
   <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-5-gif_480x480.gif?v=1557165442">     
    
   <h4> Step 6: Grab the Yarn</h4>
-  <p> With your free middle, ring, and pinky fingers on your left hand, 
-  grab around the 2 dangling strands of yarn, like you are making a fist, 
-  and hold the strands out of the way.
-  </p> 
   <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-6-gif_480x480.gif?v=1557165505">     
  
   <h4> Step 7: Push Yarn Apart</h4>
   <p> Separate your thumb and index finger- like you are making a sling-shot 
-  with your fingers. This will push the strands of yarn apart.
+  with your fingers. 
   </p> 
   <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/long-tail-cast-on-step-7-gif_480x480.gif?v=1557165581">     
    
