--- a/Ksteps.html
+++ b/Ksteps.html
@@ -76,8 +76,7 @@
    
   <h4> Step 3: Insert the Empty Needle into the First Stitch</h4>
   <p> Insert the new needle into the first stitch, going upwards 
-  into the stitch and creating an “X” with your needles. The old needle (with stitches on it) 
-  is on top of the new needle.
+  into the stitch and creating an “X” with your needles.
   </p> 
   <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/knit-stitch-step-4-gif_480x480.gif?v=1557168679">   
 
