--- a/Csteps.html
+++ b/Csteps.html
@@ -57,6 +57,8 @@
   <a href="index.html">Home</a>
   <a href="Csteps.html">Steps:Cast On</a>
   <a href="Ksteps.html">Steps:Knit Stitch</a>
+  <a href="Coff.html">Cast Off</a>
+
 </div>
   
  <div class="main">
