--- a/Ksteps.html
+++ b/Ksteps.html
@@ -59,6 +59,8 @@
   <a href="index.html">Home</a>
   <a href="steps.html">Steps:Cast On</a>
   <a href="Ksteps.html">Steps:Knit Stitch</a>
+  <a href="Coff.html">Cast Off</a>
+
 </div>
   
   
