--- a/Coff.html
+++ b/Coff.html
@@ -66,7 +66,7 @@
   
     <body>
     <video width="320" height="240" controls>
-      <source src="https://youtu.be/nSqL9urz_Xc" type=video/ogg>
+      <source src="https://youtu.be/nSqL9urz_Xc">
     </video>
   </body>
 
