--- a/Coff.html
+++ b/Coff.html
@@ -65,9 +65,8 @@
   <h2> Casting Off</h2>
   
     <body>
-    <video width="320" height="240" controls>
-      <source src="https://youtu.be/nSqL9urz_Xc">
-    </video>
+   <iframe width="420" height="345" src="https://youtu.be/nSqL9urz_Xc?t=5">
+</iframe>
   </body>
 
 
