--- a/Coff.html
+++ b/Coff.html
@@ -65,8 +65,8 @@
   <h2> Casting Off</h2>
   
     <body>
-   <iframe width="420" height="345" src="https://www.youtube.com/watch?v=nSqL9urz_Xc">
-</iframe>
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/nSqL9urz_Xc" 
+  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
 
 
