--- a/index.html
+++ b/index.html
@@ -64,18 +64,16 @@
  <div class="main">
   <h1 class="title cursive capitalize" >How to Knit</h1> 
   <img src="https://irepo.primecp.com/2017/06/335612/What-is-a-skein-of-yarn-9_Large600_ID-2291129.jpg?v=2291129">
-  <!--<a href="menu.html" title="sup">A little more info</a>  -->     
    
-  
-  <p></p>
+  <h3>Knitting is as Simple as 1, 2, 3</h3>
+  <p>Knitting boils down to three essential skills. Master them and you’re officially a knitter. It’s that simple!
+  </p>
 
-  <h2</h2>
-  <div class="description">. <a href="http://travel.nationalgeographic.com/travel/city-guides/florence-italy/" target="_blank">Learn More</a>.
-    <h5>Top Attractions</h5>
+  <h5>The Three Skill Are:</h5>
     <ul>
-      <li>Museums</li>
-      <li>Bike Tours</li>
-      <li>Historical Monuments</li>
+      <li>Cast On</li>
+      <li>Knit Stitch</li>
+      <li>Cast Off</li>
     </ul>
   </div>
 
