--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </div>
    
  <div class="main">
-  <h1 class="title cursive capitalize" >How to Knit</h1> 
+  <h1 class="title cursive capitalize" >How to Knit for Beginners</h1> 
   <img src="https://irepo.primecp.com/2017/06/335612/What-is-a-skein-of-yarn-9_Large600_ID-2291129.jpg?v=2291129">
    
   <h3>Knitting is as Simple as 1, 2, 3</h3>
@@ -75,38 +75,12 @@
       <li>Knit Stitch</li>
       <li>Cast Off</li>
     </ul>
+  
+  <h3>Supplies to Gather</h3> 
+  <blockquote> Yarn: Chunky yarn because it is easier to knit with for beginners.
+  Needles: Wood or Bamboo needles that are thick! 
+  </blockquote>  
   </div>
-
-  <h2 class="destination">2. Beijing, China</h2>
-  <div class="description">..
-    <a href="http://travel.nationalgeographic.com/travel/city-guides/beijing-china/" target="_blank">Learn More</a>.
-    <h5>Top Attractions</h5>
-    <ul>
-      <li>Biking</li>
-      <li>Historical Sites</li>
-      <li>Restaurants and Dining</li>
-    </ul>
-  </div>
-
-  <h2 class="destination">3. Seoul, South Korea</h2>
-  <div class="description">.
-    <a href="http://travel.nationalgeographic.com/travel/city-guides/seoul-south-korea/" target="_blank">Learn More</a>.
-    <h5>Top Attractions</h5>
-    <ul>
-      <li>Parasailing</li>
-      <li>Segway Tours</li>
-      <li>Spas and Resorts</li>
-    </ul>
-  </div>
-
-  <h2> More Desinations </h2>
-  <ul>
-    <li><h4 class="destination">Jackson Hole, Wyoming</h4></li>
-    <li><h4 class="destination">Cape Town, South Africa</h4></li>
-    <li><h4 class="destination">La Paz, Bolivia</h4></li>
-  </ul>
-
-</div>
 
 
 </html>
