--- a/index.html
+++ b/index.html
@@ -62,14 +62,16 @@
 </div>
    
  <div class="main">
-  <h1 class="title cursive capitalize" >How to Knit for Beginners</h1> 
+  <h1>How to Knit for Beginners</h1> 
+    <!--     <h1 class="title cursive capitalize" >How to Knit for Beginners</h1> -->
+
   <img src="https://irepo.primecp.com/2017/06/335612/What-is-a-skein-of-yarn-9_Large600_ID-2291129.jpg?v=2291129">
    
   <h3>Knitting is as Simple as 1, 2, 3</h3>
   <p>Knitting boils down to three essential skills. Master them and you’re officially a knitter. It’s that simple!
   </p>
 
-  <h5>The Three Skill Are:</h5>
+  <h4>The Three Skill Are:</h4>
     <ul>
       <li>Cast On</li>
       <li>Knit Stitch</li>
