--- a/Coff.html
+++ b/Coff.html
@@ -69,8 +69,11 @@
   frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
 
+  <div class="alert alert-info" role="alert">
+  This is a quick video on casting off a stitch!
+  </div>
 
-
+</div>
 
    
  </html>
