--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     </ul>
   
   <h3>Supplies to Gather</h3> 
-  <blockquote> Yarn: Chunky yarn because it is easier to knit with for beginners.
-  Needles: Wood or Bamboo needles that are thick! 
+  <blockquote><p> Yarn: Chunky yarn because it is easier to knit with for beginners.</p>
+  <p>Needles: Wood or Bamboo needles that are thick!</p> 
   </blockquote>  
   </div>
 
