--- a/Ksteps.html
+++ b/Ksteps.html
@@ -90,7 +90,10 @@
   <h4> Step 5:  Use the Right Needle to pull under the left needle</h4>
   <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/knit-stitch-step-6-gif_480x480.gif?v=1557168805">    
   
-  <h4> Step 6:  Repeat</h4>
+  <h4> Step 6:  Pull the original stitch off of the left needle with the new stitch you just made</h4>
+  <img src="https://cdn.shopify.com/s/files/1/1169/5498/files/knit-stitch-step-7-gif_07155473-8742-4b7b-b072-887400f91bed_480x480.gif?v=1557168905"> 
+  
+  <h4> Step 7:  Repeat</h4>
   
 
   
